updates to fix a element issue on the main page. Hopefully, this will fix the issues Cody sees on IE regarding Emmet and the couch.

--- a/compass/assets/sass/brickslopes.scss
+++ b/compass/assets/sass/brickslopes.scss
@@ -556,7 +556,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
                 height: 50px;
                 width: 100px;
                 bottom: 160px;
-                left: 30px;
+                left: 10px;
             }
 
             #publicTickets {
